feat: bare-bones working version of the Goblin card game "Gzouca"